tooling/nargo_cli/tests/snapshots/execution_success/signed_division/execute__tests__force_brillig_true_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "z",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "13301295855638053177": {
        "error_kind": "string",
        "string": "Attempt to divide with overflow"
      },
      "14990209321349310352": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      },
      "15764276373176857197": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _2",
    "private parameters indices : [_0, _1, _2]",
    "public parameters indices : []",
    "return value indices : []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 0 ], EXPR [ (1, _1) 0 ], EXPR [ (1, _2) 0 ]], outputs: []",
    "unconstrained func 0",
    "[Const { destination: Direct(2), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(1), bit_size: Integer(U32), value: 32839 }, Const { destination: Direct(0), bit_size: Integer(U32), value: 3 }, Const { destination: Relative(4), bit_size: Integer(U32), value: 3 }, Const { destination: Relative(5), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(32836), size_address: Relative(4), offset_address: Relative(5) }, Cast { destination: Direct(32836), source: Direct(32836), bit_size: Integer(U32) }, Cast { destination: Direct(32837), source: Direct(32837), bit_size: Integer(U32) }, Cast { destination: Direct(32838), source: Direct(32838), bit_size: Integer(U32) }, Mov { destination: Relative(1), source: Direct(32836) }, Mov { destination: Relative(2), source: Direct(32837) }, Mov { destination: Relative(3), source: Direct(32838) }, Call { location: 17 }, Call { location: 18 }, Const { destination: Relative(1), bit_size: Integer(U32), value: 32839 }, Const { destination: Relative(2), bit_size: Integer(U32), value: 0 }, Stop { return_data: HeapVector { pointer: Relative(1), size: Relative(2) } }, Return, Call { location: 218 }, Const { destination: Relative(10), bit_size: Integer(U32), value: 2147483647 }, BinaryIntOp { destination: Relative(5), op: LessThan, bit_size: U32, lhs: Relative(10), rhs: Relative(1) }, Const { destination: Relative(11), bit_size: Integer(U32), value: 0 }, BinaryIntOp { destination: Relative(12), op: Sub, bit_size: U32, lhs: Relative(11), rhs: Relative(1) }, JumpIf { condition: Relative(5), location: 25 }, Jump { location: 27 }, Mov { destination: Relative(6), source: Relative(12) }, Jump { location: 29 }, Mov { destination: Relative(6), source: Relative(1) }, Jump { location: 29 }, Const { destination: Relative(10), bit_size: Integer(U32), value: 2147483647 }, BinaryIntOp { destination: Relative(7), op: LessThan, bit_size: U32, lhs: Relative(10), rhs: Relative(2) }, Const { destination: Relative(11), bit_size: Integer(U32), value: 0 }, BinaryIntOp { destination: Relative(12), op: Sub, bit_size: U32, lhs: Relative(11), rhs: Relative(2) }, JumpIf { condition: Relative(7), location: 35 }, Jump { location: 37 }, Mov { destination: Relative(8), source: Relative(12) }, Jump { location: 39 }, Mov { destination: Relative(8), source: Relative(2) }, Jump { location: 39 }, BinaryIntOp { destination: Relative(4), op: Div, bit_size: U32, lhs: Relative(6), rhs: Relative(8) }, BinaryIntOp { destination: Relative(9), op: Xor, bit_size: U1, lhs: Relative(5), rhs: Relative(7) }, JumpIf { condition: Relative(9), location: 43 }, Jump { location: 45 }, Const { destination: Relative(10), bit_size: Integer(U32), value: 0 }, BinaryIntOp { destination: Relative(4), op: Sub, bit_size: U32, lhs: Relative(10), rhs: Relative(4) }, JumpIf { condition: Relative(9), location: 51 }, Const { destination: Relative(11), bit_size: Integer(U32), value: 2147483648 }, BinaryIntOp { destination: Relative(10), op: LessThan, bit_size: U32, lhs: Relative(4), rhs: Relative(11) }, JumpIf { condition: Relative(10), location: 51 }, JumpIf { condition: Relative(10), location: 51 }, Call { location: 224 }, BinaryIntOp { destination: Relative(5), op: Equals, bit_size: U32, lhs: Relative(4), rhs: Relative(3) }, JumpIf { condition: Relative(5), location: 55 }, Const { destination: Relative(6), bit_size: Integer(U32), value: 0 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Relative(6) } }, Cast { destination: Relative(4), source: Relative(1), bit_size: Field }, Const { destination: Relative(5), bit_size: Field, value: 340282366920938463463374607431768211456 }, BinaryFieldOp { destination: Relative(6), op: Sub, lhs: Relative(5), rhs: Relative(4) }, Cast { destination: Relative(7), source: Relative(6), bit_size: Integer(U32) }, Cast { destination: Relative(4), source: Relative(7), bit_size: Field }, Cast { destination: Relative(6), source: Relative(4), bit_size: Integer(U32) }, Cast { destination: Relative(7), source: Relative(3), bit_size: Field }, BinaryFieldOp { destination: Relative(8), op: Sub, lhs: Relative(5), rhs: Relative(7) }, Cast { destination: Relative(9), source: Relative(8), bit_size: Integer(U32) }, Cast { destination: Relative(7), source: Relative(9), bit_size: Field }, Cast { destination: Relative(8), source: Relative(7), bit_size: Integer(U32) }, Cast { destination: Relative(9), source: Relative(2), bit_size: Field }, BinaryFieldOp { destination: Relative(10), op: Sub, lhs: Relative(5), rhs: Relative(9) }, Cast { destination: Relative(9), source: Relative(10), bit_size: Integer(U32) }, Cast { destination: Relative(5), source: Relative(9), bit_size: Field }, Cast { destination: Relative(9), source: Relative(5), bit_size: Integer(U32) }, BinaryIntOp { destination: Relative(5), op: Add, bit_size: U32, lhs: Relative(1), rhs: Relative(6) }, Mov { destination: Relative(10), source: Relative(5) }, Cast { destination: Relative(5), source: Relative(10), bit_size: Integer(U32) }, Cast { destination: Relative(12), source: Relative(1), bit_size: Integer(U32) }, Cast { destination: Relative(13), source: Relative(4), bit_size: Integer(U32) }, Const { destination: Relative(4), bit_size: Integer(U32), value: 2147483648 }, BinaryIntOp { destination: Relative(14), op: LessThan, bit_size: U32, lhs: Relative(12), rhs: Relative(4) }, BinaryIntOp { destination: Relative(12), op: LessThan, bit_size: U32, lhs: Relative(13), rhs: Relative(4) }, BinaryIntOp { destination: Relative(13), op: Equals, bit_size: U1, lhs: Relative(14), rhs: Relative(12) }, BinaryIntOp { destination: Relative(12), op: LessThan, bit_size: U32, lhs: Relative(5), rhs: Relative(4) }, BinaryIntOp { destination: Relative(5), op: Equals, bit_size: U1, lhs: Relative(12), rhs: Relative(14) }, BinaryIntOp { destination: Relative(12), op: Mul, bit_size: U1, lhs: Relative(5), rhs: Relative(13) }, BinaryIntOp { destination: Relative(5), op: Equals, bit_size: U1, lhs: Relative(12), rhs: Relative(13) }, JumpIf { condition: Relative(5), location: 86 }, Call { location: 227 }, Const { destination: Relative(5), bit_size: Integer(U32), value: 0 }, BinaryIntOp { destination: Relative(12), op: Equals, bit_size: U32, lhs: Relative(10), rhs: Relative(5) }, JumpIf { condition: Relative(12), location: 91 }, Const { destination: Relative(13), bit_size: Integer(U32), value: 0 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Relative(13) } }, BinaryIntOp { destination: Relative(10), op: Add, bit_size: U32, lhs: Relative(3), rhs: Relative(8) }, Mov { destination: Relative(12), source: Relative(10) }, Cast { destination: Relative(10), source: Relative(12), bit_size: Integer(U32) }, Cast { destination: Relative(13), source: Relative(3), bit_size: Integer(U32) }, Cast { destination: Relative(14), source: Relative(7), bit_size: Integer(U32) }, BinaryIntOp { destination: Relative(7), op: LessThan, bit_size: U32, lhs: Relative(13), rhs: Relative(4) }, BinaryIntOp { destination: Relative(13), op: LessThan, bit_size: U32, lhs: Relative(14), rhs: Relative(4) }, BinaryIntOp { destination: Relative(14), op: Equals, bit_size: U1, lhs: Relative(7), rhs: Relative(13) }, BinaryIntOp { destination: Relative(13), op: LessThan, bit_size: U32, lhs: Relative(10), rhs: Relative(4) }, BinaryIntOp { destination: Relative(4), op: Equals, bit_size: U1, lhs: Relative(13), rhs: Relative(7) }, BinaryIntOp { destination: Relative(7), op: Mul, bit_size: U1, lhs: Relative(4), rhs: Relative(14) }, BinaryIntOp { destination: Relative(4), op: Equals, bit_size: U1, lhs: Relative(7), rhs: Relative(14) }, JumpIf { condition: Relative(4), location: 105 }, Call { location: 227 }, BinaryIntOp { destination: Relative(4), op: Equals, bit_size: U32, lhs: Relative(12), rhs: Relative(5) }, JumpIf { condition: Relative(4), location: 109 }, Const { destination: Relative(7), bit_size: Integer(U32), value: 0 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Relative(7) } }, Const { destination: Relative(14), bit_size: Integer(U32), value: 2147483647 }, BinaryIntOp { destination: Relative(5), op: LessThan, bit_size: U32, lhs: Relative(14), rhs: Relative(6) }, Const { destination: Relative(15), bit_size: Integer(U32), value: 0 }, BinaryIntOp { destination: Relative(16), op: Sub, bit_size: U32, lhs: Relative(15), rhs: Relative(6) }, JumpIf { condition: Relative(5), location: 115 }, Jump { location: 117 }, Mov { destination: Relative(7), source: Relative(16) }, Jump { location: 119 }, Mov { destination: Relative(7), source: Relative(6) }, Jump { location: 119 }, Const { destination: Relative(14), bit_size: Integer(U32), value: 2147483647 }, BinaryIntOp { destination: Relative(10), op: LessThan, bit_size: U32, lhs: Relative(14), rhs: Relative(2) }, Const { destination: Relative(15), bit_size: Integer(U32), value: 0 }, BinaryIntOp { destination: Relative(16), op: Sub, bit_size: U32, lhs: Relative(15), rhs: Relative(2) }, JumpIf { condition: Relative(10), location: 125 }, Jump { location: 127 }, Mov { destination: Relative(12), source: Relative(16) }, Jump { location: 129 }, Mov { destination: Relative(12), source: Relative(2) }, Jump { location: 129 }, BinaryIntOp { destination: Relative(4), op: Div, bit_size: U32, lhs: Relative(7), rhs: Relative(12) }, BinaryIntOp { destination: Relative(13), op: Xor, bit_size: U1, lhs: Relative(5), rhs: Relative(10) }, JumpIf { condition: Relative(13), location: 133 }, Jump { location: 135 }, Const { destination: Relative(14), bit_size: Integer(U32), value: 0 }, BinaryIntOp { destination: Relative(4), op: Sub, bit_size: U32, lhs: Relative(14), rhs: Relative(4) }, JumpIf { condition: Relative(13), location: 141 }, Const { destination: Relative(15), bit_size: Integer(U32), value: 2147483648 }, BinaryIntOp { destination: Relative(14), op: LessThan, bit_size: U32, lhs: Relative(4), rhs: Relative(15) }, JumpIf { condition: Relative(14), location: 141 }, JumpIf { condition: Relative(14), location: 141 }, Call { location: 224 }, BinaryIntOp { destination: Relative(2), op: Equals, bit_size: U32, lhs: Relative(4), rhs: Relative(8) }, JumpIf { condition: Relative(2), location: 145 }, Const { destination: Relative(5), bit_size: Integer(U32), value: 0 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Relative(5) } }, Const { destination: Relative(13), bit_size: Integer(U32), value: 2147483647 }, BinaryIntOp { destination: Relative(4), op: LessThan, bit_size: U32, lhs: Relative(13), rhs: Relative(6) }, Const { destination: Relative(14), bit_size: Integer(U32), value: 0 }, BinaryIntOp { destination: Relative(16), op: Sub, bit_size: U32, lhs: Relative(14), rhs: Relative(6) }, JumpIf { condition: Relative(4), location: 151 }, Jump { location: 153 }, Mov { destination: Relative(5), source: Relative(16) }, Jump { location: 155 }, Mov { destination: Relative(5), source: Relative(6) }, Jump { location: 155 }, Const { destination: Relative(13), bit_size: Integer(U32), value: 2147483647 }, BinaryIntOp { destination: Relative(7), op: LessThan, bit_size: U32, lhs: Relative(13), rhs: Relative(9) }, Const { destination: Relative(14), bit_size: Integer(U32), value: 0 }, BinaryIntOp { destination: Relative(16), op: Sub, bit_size: U32, lhs: Relative(14), rhs: Relative(9) }, JumpIf { condition: Relative(7), location: 161 }, Jump { location: 163 }, Mov { destination: Relative(10), source: Relative(16) }, Jump { location: 165 }, Mov { destination: Relative(10), source: Relative(9) }, Jump { location: 165 }, BinaryIntOp { destination: Relative(2), op: Div, bit_size: U32, lhs: Relative(5), rhs: Relative(10) }, BinaryIntOp { destination: Relative(12), op: Xor, bit_size: U1, lhs: Relative(4), rhs: Relative(7) }, JumpIf { condition: Relative(12), location: 169 }, Jump { location: 171 }, Const { destination: Relative(13), bit_size: Integer(U32), value: 0 }, BinaryIntOp { destination: Relative(2), op: Sub, bit_size: U32, lhs: Relative(13), rhs: Relative(2) }, JumpIf { condition: Relative(12), location: 177 }, Const { destination: Relative(14), bit_size: Integer(U32), value: 2147483648 }, BinaryIntOp { destination: Relative(13), op: LessThan, bit_size: U32, lhs: Relative(2), rhs: Relative(14) }, JumpIf { condition: Relative(13), location: 177 }, JumpIf { condition: Relative(13), location: 177 }, Call { location: 224 }, BinaryIntOp { destination: Relative(4), op: Equals, bit_size: U32, lhs: Relative(2), rhs: Relative(3) }, JumpIf { condition: Relative(4), location: 181 }, Const { destination: Relative(5), bit_size: Integer(U32), value: 0 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Relative(5) } }, Const { destination: Relative(10), bit_size: Integer(U32), value: 2147483647 }, BinaryIntOp { destination: Relative(3), op: LessThan, bit_size: U32, lhs: Relative(10), rhs: Relative(1) }, Const { destination: Relative(12), bit_size: Integer(U32), value: 0 }, BinaryIntOp { destination: Relative(13), op: Sub, bit_size: U32, lhs: Relative(12), rhs: Relative(1) }, JumpIf { condition: Relative(3), location: 187 }, Jump { location: 189 }, Mov { destination: Relative(4), source: Relative(13) }, Jump { location: 191 }, Mov { destination: Relative(4), source: Relative(1) }, Jump { location: 191 }, Const { destination: Relative(10), bit_size: Integer(U32), value: 2147483647 }, BinaryIntOp { destination: Relative(5), op: LessThan, bit_size: U32, lhs: Relative(10), rhs: Relative(9) }, Const { destination: Relative(12), bit_size: Integer(U32), value: 0 }, BinaryIntOp { destination: Relative(13), op: Sub, bit_size: U32, lhs: Relative(12), rhs: Relative(9) }, JumpIf { condition: Relative(5), location: 197 }, Jump { location: 199 }, Mov { destination: Relative(6), source: Relative(13) }, Jump { location: 201 }, Mov { destination: Relative(6), source: Relative(9) }, Jump { location: 201 }, BinaryIntOp { destination: Relative(2), op: Div, bit_size: U32, lhs: Relative(4), rhs: Relative(6) }, BinaryIntOp { destination: Relative(7), op: Xor, bit_size: U1, lhs: Relative(3), rhs: Relative(5) }, JumpIf { condition: Relative(7), location: 205 }, Jump { location: 207 }, Const { destination: Relative(10), bit_size: Integer(U32), value: 0 }, BinaryIntOp { destination: Relative(2), op: Sub, bit_size: U32, lhs: Relative(10), rhs: Relative(2) }, JumpIf { condition: Relative(7), location: 213 }, Const { destination: Relative(12), bit_size: Integer(U32), value: 2147483648 }, BinaryIntOp { destination: Relative(10), op: LessThan, bit_size: U32, lhs: Relative(2), rhs: Relative(12) }, JumpIf { condition: Relative(10), location: 213 }, JumpIf { condition: Relative(10), location: 213 }, Call { location: 224 }, BinaryIntOp { destination: Relative(1), op: Equals, bit_size: U32, lhs: Relative(2), rhs: Relative(8) }, JumpIf { condition: Relative(1), location: 217 }, Const { destination: Relative(3), bit_size: Integer(U32), value: 0 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Relative(3) } }, Return, Const { destination: Direct(32772), bit_size: Integer(U32), value: 30720 }, BinaryIntOp { destination: Direct(32771), op: LessThan, bit_size: U32, lhs: Direct(0), rhs: Direct(32772) }, JumpIf { condition: Direct(32771), location: 223 }, IndirectConst { destination_pointer: Direct(1), bit_size: Integer(U64), value: 15764276373176857197 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Direct(2) } }, Return, IndirectConst { destination_pointer: Direct(1), bit_size: Integer(U64), value: 13301295855638053177 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Direct(2) } }, Return, IndirectConst { destination_pointer: Direct(1), bit_size: Integer(U64), value: 14990209321349310352 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Direct(2) } }, Return]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
