tooling/nargo_cli/tests/snapshots/execution_success/signed_division/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: i32, v2: i32, v4: i32):
    v1 = allocate -> &mut i32
    store v0 at v1
    v3 = allocate -> &mut i32
    store v2 at v3
    v5 = allocate -> &mut i32
    store v4 at v5
    (no terminator instruction)
}
